--- a/shorten_url/styles.css
+++ b/shorten_url/styles.css
@@ -1,6 +1,6 @@
 body {
     background-position: center;
-    background-image: url(/bg.jpg);
+    background-image: url(bg.jpg);
     background-size: cover;
     height: 100%;
     margin: auto;
